Package.json Update

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "lumous",
     "title": "lumous",
-    "description": "A dark interface with vibrant colours.",
+    "description": "lumous - A dark interface with vibrant colours.",
     "homepage": "https://github.com/BenConstable9/lumous",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "author": "Ben Constable",
     "license": "MIT",
     "theme": {
@@ -11,5 +11,5 @@
         "dark": true,
         "addModeClass": true
     },
-    "keywords": ["Lumous, vibrant theme, vivid"]
+    "keywords": ["Lumous, vibrant theme, lumous, vivid"]
 }
